[workspace]
resolver = "2"
members = [
    "src/rpc", 
    "src/ss",
    "src/ls",
    "src/ts",
    "test"
]

[patch.crates-io]

[profile.release]
opt-level = 'z'
debug = 1

[workspace.dependencies]
tonic = "0.12.3"
prost = "0.13.4"
prost-types = "0.13.4"
tokio = "1.11"
tracing = "0.1.33"
tracing-subscriber = "0.3.11"
rocksdb = "0.23.0"
clap = { version = "4.4.1", features = ["derive"] }
serde = { version = "1.0.219", features = ["derive"] }
num_cpus = "1.16"
thiserror = "2.0.11"
tempfile = "3.3"
byteorder = "1.4.3"
tokio-stream = { version = "0.1", features = ["net"] }
futures = "0.3.14"
base64 = "0.22.1"