[package]
name = "integration-test"
version = "0.1.0"
edition = "2021"

[dependencies]
tonic = { workspace = true }
prost = { workspace = true }
tokio = { version = "1.11", features = ["full", "rt-multi-thread"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
rpc = { path = "../src/rpc" }

[[bin]]
name = "ce"
path = "ss_ls.rs"