[package]
name = "ss"
version = "0.1.0"
edition = "2024"

[dependencies]
rpc = { path = "../rpc" }

byteorder = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tonic = { workspace = true }
tokio = { version = "1.0", features = ["full"] }
tokio-stream = { workspace = true }
thiserror = { workspace = true }
futures = { workspace = true }
rocksdb = { workspace = true }
tempfile = { workspace = true }
serde = { workspace = true }
num_cpus = { workspace = true }
tracing-subscriber = { workspace = true }
[dev-dependencies]
tracing-subscriber = { workspace = true }
tracing-test = "0.2.5"
serial_test = "3.2.0"

[features]
default = ["backtrace"]
backtrace = []