[package]
name = "ts"
version = "0.1.0"
edition = "2021"

[lib]
name = "ts"

[[bin]]
name = "ts"
path = "src/main.rs"

[[bin]]
name = "acid_test"
path = "src/bin/acid_test.rs"

[[bin]]
name = "acid_test_server"
path = "src/bin/acid_test_server.rs"

[dependencies]
tokio = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
clap = { workspace = true }
thiserror = { workspace = true }
futures = { workspace = true }
chrono = "0.4"
prost-types = "0.11"
prost-wkt-types = "0.7.0"
# 内部依赖
rpc = { path = "../rpc" }  
base64 = { workspace = true }
byteorder = { workspace = true }
tokio-util = "0.7"
tempfile = "3.3"
serde_json = "1.0"
